--- a/profil.html
+++ b/profil.html
@@ -9,16 +9,20 @@
 <body>
     <h1> My Profil</h1>
     <hr>
+    <img src="Adit.jpg" alt="foto_profil" width="200" height="200" >
     <p>Name: Aditya Bayu Prabowo</p>
-    
     <p>Nick Name: Adit</p>
     <p>Brief Introduction : </p>
     <p>
         I am a student at <span style="color: black ;font-weight: bold;">Informatic Engineering UPN Veteran Yogyakarta</span> . I wants to join ZettaCamp, not only to gain experience, but i also wants to get good relationship in the industrial aspect.
     </p>
-    <p>Skill : Basic programming, and IoT programming</p>
+
     <p>Hobby : Gaming and jogging .</p>
     <p>Facebook : <a href="http:https://web.facebook.com/abp220898/">Aditya Bayu Prabowo</a><p>
-
+    <p>Skill : </p>
+    <ol>
+        <li>Basic programming</li>
+        <li>IoT programming</li>
+    </ol>
 </body>
 </html>
