--- a/profil.html
+++ b/profil.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> My Profil</h1>
+    <span>Front End Participant Zettacamp Catfish</span>
     <hr>
     <img src="Adit.jpg" alt="foto_profil" width="200" height="200" >
     <p>Name: Aditya Bayu Prabowo</p>
@@ -17,7 +18,7 @@
         I am a student at <span style="color: black ;font-weight: bold;">Informatic Engineering UPN Veteran Yogyakarta</span> . I wants to join ZettaCamp, not only to gain experience, but i also wants to get good relationship in the industrial aspect.
     </p>
 
-    <p>Hobby : Gaming and jogging .</p>
+    <p>Hobby : Gaming and jogging.</p>
     <p>Facebook : <a href="http:https://web.facebook.com/abp220898/">Aditya Bayu Prabowo</a><p>
     <p>Skill : </p>
     <ol>
