--- a/profil.html
+++ b/profil.html
@@ -15,11 +15,12 @@
     <p>Nick Name: Adit</p>
     <p>Brief Introduction : </p>
     <p>
-        I am a student at <span style="color: black ;font-weight: bold;">Informatic Engineering UPN Veteran Yogyakarta</span> . I wants to join ZettaCamp, not only to gain experience, but i also wants to get good relationship in the industrial aspect.
+        I am a student at <span style="color: black ;font-weight: bold;">Informatic Engineering UPN Veteran Yogyakarta</span>. I wants to join ZettaCamp, not only to gain experience, but i also wants to get good relationship in the industrial aspect.
     </p>
 
     <p>Hobby : Gaming and jogging.</p>
     <p>Facebook : <a href="http:https://web.facebook.com/abp220898/">Aditya Bayu Prabowo</a><p>
+    <p>Whatsapp : <a href="http://wa.me/6288227661015">088227661015</a></p>
     <p>Skill : </p>
     <ol>
         <li>Basic programming</li>
