--- a/profil.html
+++ b/profil.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profil</title>
+    <title>Profil Participants Zettacamp Catfish</title>
 </head>
 <body>
-    <h1> My Profil</h1>
+    <h1>Profil</h1>
     <span>Front End Participant Zettacamp Catfish</span>
     <hr>
     <img src="Adit.jpg" alt="foto_profil" width="200" height="200" >
