--- a/profil.html
+++ b/profil.html
@@ -11,17 +11,18 @@
     <span>Front End Participant Zettacamp Catfish</span>
     <hr>
     <img src="Adit.jpg" alt="foto_profil" width="200" height="200" >
-    <p>Name: Aditya Bayu Prabowo</p>
-    <p>Nick Name: Adit</p>
-    <p>Brief Introduction : </p>
-    <p>
+    <p id="name">Name: Aditya Bayu Prabowo</p>
+    <p id="nick_name">Nick Name: Adit</p>
+    <p id="intoduction">Brief Introduction : 
+        <br>
+        <br>
         I am a student at <span style="color: black ;font-weight: bold;">Informatic Engineering UPN Veteran Yogyakarta</span>. I wants to join ZettaCamp, not only to gain experience, but i also wants to get good relationship in the industrial aspect.
     </p>
-
-    <p>Hobby : Gaming and jogging.</p>
-    <p>Facebook : <a href="http:https://web.facebook.com/abp220898/">Aditya Bayu Prabowo</a><p>
-    <p>Whatsapp : <a href="http://wa.me/6288227661015">088227661015</a></p>
-    <p>Skill : </p>
+    
+    <p id="hobby">Hobby : Gaming and jogging.</p>
+    <p id="facebook">Facebook : <a href="http:https://web.facebook.com/abp220898/">Aditya Bayu Prabowo</a><p>
+    <p id="whatsapp">Whatsapp : <a href="http://wa.me/6288227661015">088227661015</a></p>
+    <p id="skill">Skill : </p>
     <ol>
         <li>Basic programming</li>
         <li>IoT programming</li>
