--- a/html/album_preview.html
+++ b/html/album_preview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>Album Preview Page</title>
     <link rel="stylesheet" href="../asset/style/style.css" />
   </head>
   <body>
@@ -42,6 +42,64 @@
                 </div>
             </div>
 
+            <div class="flex-container">
+                <div class="flex-item">
+                    <h1 style="text-align: center">Artist</h1>
+                    <hr>
+                    <article style="text-align: justify;">
+                        <p>
+                            Name : Peterpan
+                        </p>
+                        <p>
+                            Year Creation : 2004
+                        </p>
+                        <p>
+                            City Of Origin : Bandung
+                        </p>
+                    </article>
+                    <hr>
+                </div>
+                <div class="flex-item">
+                    <h1 style="text-align: center">Information Album</h1>
+                    <hr>
+                    <article style="text-align: justify;">
+                        <p>
+                            All tracks are written by Ariel, except for "Aku" which is written by Ariel and Andika and "Masa Lalu Tertinggal" which is written by Ariel and Indra.
+                        </p>
+                        <ol>
+                            <li>"Ada Apa Denganmu?" (What's Up With You)</li>
+                            <li>
+                                "Mungkin Nanti" (Maybe Later)
+                            </li>
+                            <li>
+                                "Khayalan Tingkat Tinggi" (High-Level Imagination)
+                            </li>
+                            <li>
+                                "Di Belakangku" (Behind Me)
+                            </li>
+                            <li>
+                                "Ku Katakan Dengan Indah" (I Say it Beautifully)
+                            </li>
+                            <li>
+                                "Diatas Normal" (Above Normal)
+                            </li>
+
+                        </ol>
+                    </article>
+                    <hr>
+                </div>
+                <div class="flex-item">
+                    <h1 style="text-align: center">Price Album</h1>
+                    <hr>
+                    <h3>180 &dollar; / Month</h3>
+                    <br>
+                    <div class="row">
+                        <div style="width: 60%;">
+                            <button type="submit"><a href="../html/song_listing.html">Add Album</a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
       </main>
     </section>
