--- a/html/register.html
+++ b/html/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>Register Page</title>
     <link rel="stylesheet" href="../asset/style/style.css" />
   </head>
 <body>
@@ -50,20 +50,16 @@
                                 <label for="gender">Gender</label>
                             </div>
                             <div class="col-75">
-                                <div class="row">
+                                
                                     <div class="col-25">
                                         <input type="radio" id="gender" name="gender" value="male"/>
-                                    </div>
-                                    <div class="col-25">  
                                         <label for="male">Male</label>
                                     </div>
                                     <div class="col-25">
                                         <input type="radio" id="gender" name="gender" value="female"/>
-                                    </div>
-                                    <div class="col-25">  
                                         <label for="female">Female</label>
                                     </div>
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="row">
